# hiring_cv_bias

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  _quarto.yml  data_exploration.ipynb  gender_analysis.ipynb  gender_analysis.py  index.qmd  pylock.toml  pyproject.toml  requirements.txt  translate.py  utils.py  visualize.py
.github/workflows/: mypy.yml
data/: hard_soft_skills.csv
docs/: index.html  search.json
docs/hiring_cv_bias/hard_soft_skills_labelling/: hard_soft_skill_labelling.html
docs/notebooks/: bias_detection.html  data_cleaning.html  data_exploration.html  distributions_analysis.html
docs/pages/: 01-problem.html  02-pipeline.html  03-results.html  styles.css
hiring_cv_bias/: config.py  utils.py
hiring_cv_bias/bias_detection/: utils.py
hiring_cv_bias/bias_detection/fuzzy/: matcher.py  parser.py  parsing.py  utils.py
hiring_cv_bias/bias_detection/rule_based/: data.py  extractors.py  parser.py  patterns.py  utils.py
hiring_cv_bias/bias_detection/rule_based/app/: driving_license_fn_app.py  driving_license_fp_app.py  fn_app.py  labeling_cv_app.py
hiring_cv_bias/bias_detection/rule_based/evaluation/: bias.py  compare_parser.py  metrics.py
hiring_cv_bias/cleaning/: common.py  raw_cv.py
hiring_cv_bias/exploration/: disparity.py  gender_analysis.py  utils.py  visualize.py
hiring_cv_bias/exploration/.ipynb_checkpoints/: data_exploration-checkpoint.ipynb
hiring_cv_bias/hard_soft_skills_labelling/: hard_soft_skill_labelling.ipynb  utils.py
hiring_cv_bias/translation/: translate.py
notebooks/: bias_detection.ipynb  data_cleaning.ipynb  data_exploration.ipynb  distributions_analysis.ipynb
pages/: 01-problem.qmd  02-pipeline.qmd  03-results.qmd  styles.css
src/hiring_cv_bias/: config.py  utils.py
src/hiring_cv_bias/bias_detection/fuzzy/: Parsed_Jobs.csv  parser.py  parsing.py  utils.py
src/hiring_cv_bias/bias_detection/rule_based/: __init__.py  config.py  data.py  extractors.py  labeling_cv_app.py  parser.py  patterns.py  utils.py
src/hiring_cv_bias/bias_detection/rule_based/app/: false_positives.csv  labeling_cv_app.py
src/hiring_cv_bias/bias_detection/rule_based/evaluation/: bias.py  compare_parser.py  metrics.py
src/hiring_cv_bias/cleaning/: common.py  raw_cv.py
src/hiring_cv_bias/exploration/: data_exploration.ipynb  gender_analysis.py  utils.py  visualize.py
src/hiring_cv_bias/exploration/.ipynb_checkpoints/: data_exploration-checkpoint.ipynb
src/hiring_cv_bias/hard_soft_skills_labelling/: hard_soft_skill_labelling.ipynb  utils.py
src/hiring_cv_bias/translation/: translate.py
