[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hiring_cv_bias" 
version = "0.1.0"
description = "Analysis and mitigation of bias in CVs"
authors = [
    { name = "Francesco Baiocchi", email = "francesco.baiocchi2@studio.unibo.it" },
    { name = "Leonardo Petrilli", email = "leonardo.petrilli@studio.unibo.it" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
  "auto_mix_prep==0.2.0",
  "beautifulsoup4==4.13.3",
  "matplotlib==3.8.3",
  "polars==1.29.0",
  "requests==2.32.3",
  "seaborn==0.13.2",
  "fastexcel==0.13.0",
  "datasets==3.5.0",
  "ipykernel>=6.0.0",
  "langdetect==1.0.9",
  "pycountry==24.6.1",
  "langcodes==3.5.0",
  "language-data==1.3.0",
  "marisa-trie==1.2.1",
  "pandas>=2.2.3",
  "pip>=25.1.1",
  "transformers==4.52.4",
  "sentence-transformers==5.0.0",
  "ipywidgets>=8.1.7",
  "streamlit==1.44.0",
  "babel>=2.17.0",
  "jupyter>=1.1.1",
  "nltk>=3.9.1",
  "spacy>=3.8.7",
]


[project.optional-dependencies]
dev = [
  "pre-commit",
  "nbstripout",
  "ruff",
  "mypy",
  "types-requests",
]

[tool.mypy]
ignore_missing_imports = true

[tool.setuptools.packages.find]
where = ["."]
